--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "",
   "main": "bamazonCustomer.js",
   "dependencies": {
-    "chalk": "^2.4.2",
-    "cli-table": "^0.3.1",
     "inquirer": "^6.3.1",
-    "mysql": "^2.17.1",
-    "table": "^5.3.3"
+    "mysql": "^2.17.1"
   },
   "devDependencies": {},
   "scripts": {
